# front-end

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
.devcontainer/: devcontainer.json
SurEtBonDashboard/suretbon-project-py/: dashboard_code.py
data/: restaurant_matching_sample.parquet
suretbon_dashboard/: dashboard_code.py  read_from_bq.py  utils.py
